--- a/web/src/containers/article/article.less
+++ b/web/src/containers/article/article.less
@@ -41,6 +41,18 @@
     text-align: left;
     margin: 20px 0 30px 80px;
     line-height: 2;
+    h1 {
+      font-size: 40px;
+      text-align: left;
+    }
+    h2 {
+      font-size: 30px;
+      text-align: left
+    }
+    h3 {
+      font-size: 20px;
+      text-align: left;
+    }
   }
   .favorite {
     padding: 10px 20px;
@@ -50,5 +62,23 @@
     border-radius: 40px;
     width: 117px;
     margin: 0 auto;
+  }
+  .comment {
+    text-align: left;
+  }
+  .reply {
+    margin: 20px 0;
+    .send {
+      float: right;
+      margin: 10px;
+      width: 78px;
+      padding: 8px 18px;
+      border-radius: 20px;
+      color: #fff;
+      background-color: #43c02e;
+      cursor: pointer;
+      outline: none;
+      border: none;
+    }
   }
 }
