--- a/web/src/components/chat/chat.less
+++ b/web/src/components/chat/chat.less
@@ -1,5 +1,8 @@
 .chat {
   width: 620px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
   .title {
     text-align: center;
     border-bottom: 1px solid #f0f0f0;
@@ -9,14 +12,14 @@
   }
   .message {
     width: 80%;
-    margin: 0 auto;
+    margin: 20px auto;
+    overflow-y: scroll;
+    padding: 10px;
   }
   .write {
-    position: fixed;
     margin-left: 62px;
-    bottom: 20px;
     width: 480px;
-    textarea {
+    input {
       background-color: rgba(181, 181, 181, .1);
       padding: 6px 12px;
       border: 1px solid #ccc;
