--- a/web/src/components/header/header.less
+++ b/web/src/components/header/header.less
@@ -2,6 +2,7 @@
   width: 100%;
   height: 47px;
   border-bottom: 2px solid #f0f0f0;
+  background-color: #fff;
   position: fixed;
   top: 0;
   left: 0;
