--- a/web/src/components/useroptions/useroptions.less
+++ b/web/src/components/useroptions/useroptions.less
@@ -1,11 +1,13 @@
 .options {
-  li {
-    display: inline-block;
+  .nav {
+    display: flex;
+  }
+  .nav > li {
     width: 80px;
     height: 47px;
     margin-left: 10px;
 
-    a {
+    & > a {
       display: inline-block;
       width: 70px;
       height: 35px;
@@ -16,6 +18,44 @@
       color: #ea6f5a;
       border-radius: 30px;
       text-decoration: none;
+    }
+    .avator {
+      margin-top: 5px;
+      width: 40px;
+      height: 40px;
+      cursor: pointer;
+      img {
+        width: 100%;
+        height: 100%;
+        border: 1px solid #ddd;
+        border-radius: 50%;
+      }
+      .menu {
+        width: 160px;
+        padding: 5px 0;
+        font-size: 14px;
+        background-color: #fff;
+        border: 1px solid rgba(0, 0, 0, .15);
+        border-radius: 4px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, .1);
+        display: none;
+        & > ul > li {
+          line-height: 20px;
+          a {
+            padding: 10px 20px;
+            line-height: 30px;
+            color: #333;
+          }
+          &:hover {
+            background-color: #f5f5f5;
+          }
+        }
+      }
+      &:hover {
+        .menu {
+          display: block;
+        }
+      }
     }
   }
 }
