--- a/web/src/containers/write/write.less
+++ b/web/src/containers/write/write.less
@@ -1,3 +1,31 @@
 .write {
-  
+  .item {
+    p {
+      font-size: 15px;
+      color: #969696;
+      line-height: 2
+    }
+  }
+  .button {
+    margin: 20px 0 50px;
+    border-radius: 20px;
+    border-color: #42c02e;
+    padding: 8px 22px;
+    background: #42c02e;
+    font-size: 16px;
+    font-weight: 400;
+    color: #fff;
+    width: 66px;
+  }
+  .cover {
+    width: 300px;
+    height: 200px;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+    input {
+      display: none;
+    }
+  }
 }
